--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <h2 class="sr-only">Main Navigation</h2>
             <ul>   
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="our-team.html">Our Team</a></li>
-                <li><a href="contact-us.html">Contact Us</a></li>
+                <li><a href="#">Music</a></li>
+                <li><a href="#">Merch</a></li>
             </ul>
         </nav>
     </header>
     <main>
+        
        
     </main>
     <footer>
