--- a/index.html
+++ b/index.html
@@ -5,28 +5,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kylie Shapiro">
     <meta name="description" content="This is a website created as a final for my GIT417 class- a single page HTML, CSS, and JavaScript">
-    <title>B</title>
+    <title>Billie Eilish</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <a href="#main-content" id="skip">Skip to Main Content</a>
-    <header>
+<header>
+    <div id="header-content">
+        <h1>Billie Eilish</h1>
         <nav class="nav">
         <h2 class="sr-only">Main Navigation</h2>
             <ul>   
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Music</a></li>
-                <li><a href="#">Merch</a></li>
+                <li><a href="#albums">Albums</a></li>
+                <li><a href="#">Tour</a></li>
             </ul>
         </nav>
-    </header>
-    <main>
-        
-       
-    </main>
-    <footer>
-        <p>Copyright &copy; Kylie Shapiro 2024</p>
-    </footer>
+    </div>
+    <img src="" alt="">
+</header>
+<main id="main">
+    <section id="albums">
+        <h2>Albums</h2>
+        <section id="whenwefallasleep">
+            <ul class="tracklist">
+                <li>!!!!!!!</li>
+                <li>bad guy</li>
+                <li>you should see me in a crown</li>
+                <li>all the good girls go to hell</li>
+                <li>wish you were gay</li>
+                <li>when the party's over</li>
+                <li>8</li>
+                <li>my strange addiction</li>
+                <li>bury a friend</li>
+                <li>ilomilo</li>
+                <li>listen before i go</li>
+                <li>i love you</li>
+                <li>goodbye</li>
+            </ul>
+        </section>
+        <section id="happierthanever">
+            <ul class="tracklist">
+                <li>Getting Older</li>
+                <li>I Didn't Change My Number</li>
+                <li>Billie Bossa Nova</li>
+                <li>my future</li>
+                <li>Oxytocin</li>
+                <li>GOLDWING</li>
+                <li>Lost Cause</li>
+                <li>Halley's Coment</li>
+                <li>Not My Responsibility</li>
+                <li>OverHeated</li>
+                <li>Everybody Dies</li>
+                <li>Your Power</li>
+                <li>NDA</li>
+                <li>Therefore I Am</li>
+                <li>Happier Than Ever</li>
+                <li>Male Fantasy</li>
+            </ul>
+        </section>
+        <section id="hitmehardandsoft">
+            <ul class="tracklist">
+                <li>SKINNY</li>
+                <li>LUNCH</li>
+                <li>CHIHIRO</li>
+                <li>BIRDS OF A FEATHER</li>
+                <li>WILDFLOWER</li>
+                <li>THE GREATEST</li>
+                <li>L'AMOUR DE MA VIE</li>
+                <li>THE DINER</li>
+                <li>BITTERSUITE</li>
+                <li>BLUE</li>
+            </ul>
+        </section>
+    </section>
+    <section id="tour">
+        <h2>Tour Dates</h2>
+
+    </section>
+    <section id="game">
+
+    </section>
+    <section id="contact">
+
+    </section>
+</main>
+<footer>
+    <p>Copyright &copy; Kylie Shapiro 2024</p>
+</footer>
 </body>
 </html>
