--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
         <h2 class="sr-only">Main Navigation</h2>
             <ul>   
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#albums">Albums</a></li>
-                <li><a href="#tour">Tour</a></li>
+                <li><a href="#albums">Music</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
     <img src="images/billie1.jpg" alt="billie eilish on stage wearing a white bandana and a red jersey">
 </header>
 <main id="main">
+    <section>
+        <h2>ON TOUR NOW!</h2>
+        <p>Join Billie Eilish along with The Marias, Nat and Alex Wolff, and Towa Bird on her Hit Me Hard And Soft Tour. </p>
+    </section>
     <section id="albums">
         <h2>Music</h2>
         <section id="album1" class="currentItem">
@@ -85,16 +89,12 @@
                 <li>BLUE</li>
             </ul>
         </section>
-        <section id="switcherButtons">
+        <section id="albumButtons">
             <h2 class="sr-only">Click on a Button to View a Product</h2>
             <button id="btn1">WHEN WE ALL FALL ASLEEP, WHERE DO WE GO?</button>
             <button id="btn2">Happier Than Ever</button>
             <button id="btn3">HIT ME HARD AND SOFT</button>
         </section>
-    </section>
-    <section id="tour">
-        <h2>Tour Dates</h2>
-
     </section>
     <section id="game">
         <h2>Play For a Vinyl!</h2>
