--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="author" content="Kylie Shapiro">
     <meta name="description" content="This is a website created as a final for my GIT417 class- a single page HTML, CSS, and JavaScript">
     <title>Billie Eilish</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lalezar&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <a href="#main-content" id="skip">Skip to Main Content</a>
 <header>
+    <img src="images/billie-header.jpg" alt="billie eilish hit me hard and soft header image">
     <div id="header-content">
         <h1>Billie Eilish</h1>
         <nav class="nav">
@@ -23,7 +27,6 @@
             </ul>
         </nav>
     </div>
-    <img src="images/billie1.jpg" alt="billie eilish on stage wearing a white bandana and a red jersey">
 </header>
 <main id="main">
     <section>
@@ -31,7 +34,7 @@
         <p>Join Billie Eilish along with The Marias, Nat and Alex Wolff, and Towa Bird on her Hit Me Hard And Soft Tour. </p>
     </section>
     <section id="albums">
-        <h2>Music</h2>
+        <h2>MUSIC</h2>
         <section id="album1" class="currentItem">
             <h3>WHEN WE ALL FALL ASLEEP, WHERE DO WE GO?</h3>
             <img src="images/whenwefallcover.jpg" alt="Billie Eilish's album for when we all fall asleep where do we go">
