--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+        <button></button>
     </div>
 </header>
 <main id="main">
