--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
-<body>
+<body class="">
     <a href="#main-content" id="skip">Skip to Main Content</a>
 <header>
     <img src="images/billie-header.jpg" alt="billie eilish hit me hard and soft header image">
@@ -26,7 +26,6 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <button></button>
     </div>
 </header>
 <main id="main">
@@ -36,7 +35,7 @@
     </section>
     <section id="albums">
         <h2>MUSIC</h2>
-        <section id="album1" class="currentItem">
+        <section id="album1" class="album currentItem">
             <h3>WHEN WE ALL FALL ASLEEP, WHERE DO WE GO?</h3>
             <img src="images/whenwefallcover.jpg" alt="Billie Eilish's album for when we all fall asleep where do we go">
             <ul class="tracklist">
@@ -55,7 +54,7 @@
                 <li>goodbye</li>
             </ul>
         </section>
-        <section id="album2" class="hiddenItem">
+        <section id="album2" class="album hiddenItem">
             <h3>Happier Than Ever</h3>
             <img src="images/happierthanevercover.jpg" alt="Billie Eilish's album cover for Happier Than Ever">
             <ul class="tracklist">
@@ -77,7 +76,7 @@
                 <li>Male Fantasy</li>
             </ul>
         </section>
-        <section id="album3" class="hiddenItem">
+        <section id="album3" class="album hiddenItem">
             <h3>HIT ME HARD AND SOFT</h3>
             <img src="images/hardandsoft_cover.png" alt="Billie Eilish's album cover for Hit Me Hard And Soft">
             <ul class="tracklist">
@@ -114,12 +113,14 @@
                 <h3>Guess a Number!</h3>
                 <img src="images/billie_vinyl.png" alt="billie eilish holding up a vinyl of her newest album HIT ME HARD AND SOFT">
                 <p>Want a chance to win a free signed Billie Eilish Vinyl? Enter a number between 1 and 10 in the box to the left. If the number you guessed matches the number given, You Win! </p>
-                <p id="gameOutput"></p>
             </section>
         </div>
     </section>
     <section id="contact">
-
+        <h2>Stay in touch with Billie!</h2>
+        <form>
+            
+        </form>
     </section>
 </main>
 <footer>
